# 2argp

./: .gitignore  CMakeLists.txt
lib2argp/: CMakeLists.txt  IArgument.cpp  cli_parser.cpp
lib2argp/include/2argp/: cli_parser.hpp  exceptions.hpp  type_traits.hpp
lib2argp/include/2argp/argument/: IArgument.hpp
lib2argp/include/2argp/details/: details.hpp  type_traits.hpp
lib2argp/include/2argp/details/ipp/: cli_parser.ipp  details.ipp
